--- a/builder/Dockerfile.alpine-tracee-container
+++ b/builder/Dockerfile.alpine-tracee-container
@@ -22,8 +22,12 @@ RUN apk --no-cache update && \
     apk --no-cache add coreutils && \
     apk --no-cache add sudo curl && \
     apk --no-cache add libelf zlib && \
-    apk --no-cache add libc6-compat && \
-    curl -L -o /usr/bin/opa https://github.com/open-policy-agent/opa/releases/download/v0.48.0/opa_linux_amd64_static && \
+    apk --no-cache add libc6-compat
+
+# install OPA
+
+RUN altarch=$(uname -m | sed 's:x86_64:amd64:g' | sed 's:aarch64:arm64:g') && \
+    curl -L -o /usr/bin/opa https://github.com/open-policy-agent/opa/releases/download/v0.48.0/opa_linux_${altarch}_static && \
     chmod 755 /usr/bin/opa
 
 #
@@ -115,5 +119,3 @@ FROM $FLAVOR
 USER root
 ENV HOME /tracee
 WORKDIR /tracee
-
-# vi:syntax=dockerfile:expandtab:tabstop=4:shiftwidth=4:softtabstop=4
