workflow: pr: enable tests in arm64 and rhel_arm64 (#2844)
* workflow: pr: enable TRC-1010 in arm64

* workflow: pr: enable TRC-103 in rhel_arm64

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -25,11 +25,11 @@ concurrency:
 env:
   # TRC-103 enabled but under analysis
   # https://github.com/aquasecurity/tracee/issues/2820
-  TESTS: "TRC-102 TRC-103 TRC-104 TRC-105 TRC-107 TRC-1018 TRC-1014 TRC-1016 TRC-1010"
+  TESTS: "TRC-102 TRC-103 TRC-104 TRC-105 TRC-107 TRC-1010 TRC-1014 TRC-1016 TRC-1018"
   # ARM64 tests are disabled due to missing arm64 binaries in tracee-tester
   # https://github.com/aquasecurity/tracee/issues/2821
-  ARM64_TESTS: "TRC-102 TRC-103 TRC-104 TRC-107 TRC-1018 TRC-1014 TRC-1016"
-  RHEL_ARM64_TESTS: "TRC-102 TRC-107 TRC-1018 TRC-1014 TRC-1016"
+  ARM64_TESTS: "TRC-102 TRC-103 TRC-104 TRC-107 TRC-1010 TRC-1014 TRC-1016 TRC-1018"
+  RHEL_ARM64_TESTS: "TRC-102 TRC-103 TRC-107 TRC-1010 TRC-1014 TRC-1016 TRC-1018"
   NETTESTS: "IPv4 IPv6 TCP UDP ICMP ICMPv6 DNS HTTP"
   INSTTESTS: "VFS_WRITE FILE_MODIFICATION"
 jobs:
