makefile: normalize docker args for tracee make

--- a/builder/Makefile.tracee-make
+++ b/builder/Makefile.tracee-make
@@ -132,16 +132,16 @@ ifeq ($(BTFHUB), 1)
 endif
 
 DOCKER_RUN_ARGS = run --rm \
-	--pid=host \
-	--cgroupns=host \
-	--privileged \
+	--pid=host --cgroupns=host --privileged \
 	-v /etc/os-release:/etc/os-release-host:ro \
+	-v /boot/config-$(UNAME_R):/boot/config-$(UNAME_R):ro \
 	-v $(PWD):/tracee \
-	-v /lib/modules:/lib/modules:ro \
-	-v /usr/src:/usr/src:ro \
 	-v /sys/kernel/security:/sys/kernel/security:ro \
 	-e LIBBPFGO_OSRELEASE_FILE=/etc/os-release-host \
-	$(DOCKER_RUN_ENV)
+	$(DOCKER_RUN_ENV) \
+	-v /tmp/tracee:/tmp/tracee:rw \
+	-v /lib/modules:/lib/modules:ro \
+	-v /usr/src:/usr/src:ro \
 
 #
 # tracee-make's shell
