--- a/builder/Makefile.tracee-make
+++ b/builder/Makefile.tracee-make
@@ -37,32 +37,45 @@ CMD_DOCKER ?= docker
 .PHONY: help
 help:
 	@echo ""
-	@echo "To create an alpine-tracee-make container:"
+	@echo "CREATES A LOCAL DOCKER BUILDING ENVIRONMENT"
+	@echo ""
+	@echo "ALPINE:"
+	@echo ""
+	@echo "  To CREATE an ALPINE building container:"
 	@echo ""
 	@echo "    $$ make -f builder/Makefile.tracee-make alpine-prepare"
 	@echo ""
-	@echo "To create an ubuntu-tracee-make container:"
-	@echo ""
-	@echo "    $$ make -f builder/Makefile.tracee-make ubuntu-prepare"
-	@echo ""
-	@echo "To execute an alpine-tracee-make shell:"
+	@echo "  To EXECUTE an ALPINE building container shell:"
 	@echo ""
 	@echo "    $$ make -f builder/Makefile.tracee-make alpine-shell"
 	@echo ""
-	@echo "To execute an ubuntu-tracee-make shell:"
+	@echo "UBUNTU:"
+	@echo ""
+	@echo "  To CREATE an UBUNTU building container:"
+	@echo ""
+	@echo "    $$ make -f builder/Makefile.tracee-make ubuntu-prepare"
+	@echo ""
+	@echo "  To EXECUTE an UBUNTU building container shell:"
 	@echo ""
 	@echo "    $$ make -f builder/Makefile.tracee-make ubuntu-shell"
 	@echo ""
-	@echo "Examples:"
+	@echo "NOTES:"
+	@echo ""
+	@echo "  1. Example of how to use an UBUNTU building env as the \"MAKE\" command:"
 	@echo ""
 	@echo "    $$ make -f builder/Makefile.tracee-make ubuntu-make ARG=\"clean\""
 	@echo "    $$ make -f builder/Makefile.tracee-make ubuntu-make ARG=\"bpf-core\""
 	@echo "    $$ make -f builder/Makefile.tracee-make ubuntu-make ARG=\"tracee-ebpf\""
 	@echo ""
-	@echo "Tell tracee-make to do STATIC builds:"
+	@echo "    > This will generate UBUNTU binaries in the working ./dist directory".
 	@echo ""
-	@echo "    $$ STATIC=0 make -f builder/Makefile.tracee-make alpine-make ARG=\"tracee-ebpf\""
+	@echo "  2. You may provide STATIC variable for static binaries:"
+	@echo ""
 	@echo "    $$ STATIC=1 make -f builder/Makefile.tracee-make alpine-make ARG=\"tracee-ebpf\""
+	@echo ""
+	@echo "    > This will generate a STATIC binary in the working ./dist directory."
+	@echo "    > Despite being compiled by ALPINE, it will work in any distro."
+
 	@echo ""
 
 #
