workflow: release x64 and arm64 images
- release arm64 image after x64 one, as the x64 creates the release.
- provide both arches, x64 and arm64, images in the release.
- provide both arches, x64 and arm64, images in the snapshot release.

1. SNAPSHOT images:

- SNAPSHOT image names for x86_64 continue the same (compatibility):

    - x64: aquasec/tracee:dev            (amd64: slim)
    - x64: aquasec/tracee:dev-full       (amd64: full)

- SNAPSHOT image names according to their architecture:

    - aquasec/tracee:x86_64-dev          (amd64: slim)
    - aquasec/tracee:x86_64-dev-full     (amd64: full)
    - aquasec/tracee:aarch64-dev         (arm64: slim)
    - aquasec/tracee:aarch64-dev-full    (arm64: full)

> Automated for a daily run.

2. RELEASE images:

- RELEASE image names for x86_64 continue the same (compatibility):

    Latest tags for released images:

    - x64: aquasec/tracee:latest         (amd64: slim, latest)
    - x64: aquasec/tracee:full           (amd64: full, latest)

    Keep "per version" container images tags for x64 only:

    - x64: aquasec/tracee:GITTAG         (amd64: slim, per version)
    - x64: aquasec/tracee:GITTAG-full    (amd64: full, per version)

- RELEASE image names according to their architecture and versions:

    Preferrable aliases for latest released images (last version):

    - aquasec/tracee:x86_64              (amd64: slim, latest)
    - aquasec/tracee:x86_64-full         (amd64: full, latest)
    - aquasec/tracee:aarch64             (arm64: slim, latest)
    - aquasec/tracee:aarch64-full        (arm64: full, latest)

    Keep "per version, per architecture" container images:

    - aquasec/tracee:x86_64-GITTAG       (amd64: slim, per version)
    - aquasec/tracee:x86_64-GITTAG-full  (amd64: full, per version)
    - aquasec/tracee:aarch64-GITTAG      (arm64: slim, per version)
    - aquasec/tracee:aarch64-GITTAG-full (arm64: full, per version)

NOTE:   architecture name is derived from $(uname -m) for automation
       

--- a/.github/workflows/release-snapshot.yaml
+++ b/.github/workflows/release-snapshot.yaml
@@ -50,15 +50,16 @@ jobs:
       - name: Publish to docker.io registry
         run: |
           docker image tag tracee:latest aquasec/tracee:dev
-          docker image tag tracee:full aquasec/tracee:full-dev
+          docker image tag tracee:full   aquasec/tracee:dev-full
           docker image tag tracee:latest aquasec/tracee:x86_64-dev
-          docker image tag tracee:full aquasec/tracee:x86_64-full-dev
+          docker image tag tracee:full   aquasec/tracee:x86_64-dev-full
           docker image push aquasec/tracee:dev
           docker image push aquasec/tracee:full-dev
           docker image push aquasec/tracee:x86_64-dev
-          docker image push aquasec/tracee:x86_64-full-dev
+          docker image push aquasec/tracee:x86_64-dev-full
   release-snapshot-arm64:
     name: Release Snapshot ARM64
+    # only runs after x64 released (x64 is still the "default" arch)
     runs-on:
       [
         "github-self-hosted_ami-0aa5b93153349d9ec_${{ github.event.number }}-${{ github.run_id }}",
@@ -94,6 +95,6 @@ jobs:
       - name: Publish to docker.io registry
         run: |
           docker image tag tracee:latest aquasec/tracee:aarch64-dev
-          docker image tag tracee:full aquasec/tracee:aarch64-full-dev
+          docker image tag tracee:full   aquasec/tracee:aarch64-dev-full
           docker image push aquasec/tracee:aarch64-dev
-          docker image push aquasec/tracee:aarch64-full-dev
+          docker image push aquasec/tracee:aarch64-dev-full
