--- a/builder/Makefile.release
+++ b/builder/Makefile.release
@@ -166,6 +166,10 @@ release: \
 	.check_$(CMD_CHECKSUM) \
 	.check_$(CMD_GITHUB)
 #
+# SNAPSHOT
+#
+# ----
+#
 # build binaries (tracee-ebpf, tracee-rules, rules)
 #
 	$(MAKE) -f builder/Makefile.tracee-make ubuntu-prepare
@@ -180,54 +184,60 @@ release: \
 # build official slim container image (CO-RE + BTFHUB)
 #
 	BTFHUB=0 $(MAKE) -f builder/Makefile.tracee-container build-tracee
-ifeq ($(ARCH),x86_64)
-	$(CMD_DOCKER) tag tracee:latest $(PUSH_DOCKER_REPO):latest
-	$(CMD_DOCKER) tag tracee:latest $(PUSH_DOCKER_REPO):$(IMAGE_TAG)
-endif
-	$(CMD_DOCKER) tag tracee:latest $(PUSH_DOCKER_REPO):$(ARCH)-latest
-	$(CMD_DOCKER) tag tracee:latest $(PUSH_DOCKER_REPO):$(ARCH)-$(IMAGE_TAG)
 #
 # build official full container image (CO-RE + non CO-RE build)
 #
 	BTFHUB=0 $(MAKE) -f builder/Makefile.tracee-container build-tracee-full
-ifeq ($(ARCH),x86_64)
-	$(CMD_DOCKER) tag tracee:full $(PUSH_DOCKER_REPO):full
-	$(CMD_DOCKER) tag tracee:full $(PUSH_DOCKER_REPO):full-$(IMAGE_TAG)
-endif
-	$(CMD_DOCKER) tag tracee:full $(PUSH_DOCKER_REPO):$(ARCH)-full
-	$(CMD_DOCKER) tag tracee:full $(PUSH_DOCKER_REPO):$(ARCH)-full-$(IMAGE_TAG)
+#
+# note: the dev tags will be created by release-snapshot workflow
+#
+# ----
 #
 # RELEASE
 #
 ifneq ("$(SNAPSHOT)", "1")
 #
+# tag container images
+#
+ifeq ($(ARCH),x86_64)
+	$(CMD_DOCKER) tag tracee:latest $(PUSH_DOCKER_REPO):latest
+	$(CMD_DOCKER) tag tracee:full $(PUSH_DOCKER_REPO):full
+	$(CMD_DOCKER) tag tracee:latest $(PUSH_DOCKER_REPO):$(IMAGE_TAG)
+	$(CMD_DOCKER) tag tracee:full $(PUSH_DOCKER_REPO):$(IMAGE_TAG)-full
+endif
+	$(CMD_DOCKER) tag tracee:latest $(PUSH_DOCKER_REPO):$(ARCH)
+	$(CMD_DOCKER) tag tracee:full $(PUSH_DOCKER_REPO):$(ARCH)-full
+	$(CMD_DOCKER) tag tracee:latest $(PUSH_DOCKER_REPO):$(ARCH)-$(IMAGE_TAG)
+	$(CMD_DOCKER) tag tracee:full $(PUSH_DOCKER_REPO):$(ARCH)-$(IMAGE_TAG)-full
+#
 # push container images to docker hub
 #
 ifeq ($(ARCH),x86_64)
 	$(CMD_DOCKER) push $(PUSH_DOCKER_REPO):latest
-	$(CMD_DOCKER) push $(PUSH_DOCKER_REPO):$(IMAGE_TAG)
 	$(CMD_DOCKER) push $(PUSH_DOCKER_REPO):full
-	$(CMD_DOCKER) push $(PUSH_DOCKER_REPO):full-$(IMAGE_TAG)
+	$(CMD_DOCKER) push $(PUSH_DOCKER_REPO):$(IMAGE_TAG)
+	$(CMD_DOCKER) push $(PUSH_DOCKER_REPO):$(IMAGE_TAG)-full
 endif
-	$(CMD_DOCKER) push $(PUSH_DOCKER_REPO):$(ARCH)-latest
-	$(CMD_DOCKER) push $(PUSH_DOCKER_REPO):$(ARCH)-$(IMAGE_TAG)
+	$(CMD_DOCKER) push $(PUSH_DOCKER_REPO):$(ARCH)
 	$(CMD_DOCKER) push $(PUSH_DOCKER_REPO):$(ARCH)-full
-	$(CMD_DOCKER) push $(PUSH_DOCKER_REPO):$(ARCH)-full-$(IMAGE_TAG)
-#
-# sign pushed container images (x86_64 only)
-#
-ifeq ($(ARCH),x86_64)
-	COSIGN_EXPERIMENTAL=1 $(CMD_COSIGN) sign $(PUSH_DOCKER_REPO)@$(shell docker inspect --format='{{index .RepoDigests 0}}' $(PUSH_DOCKER_REPO):latest | awk -F'@' '{print $2}')
-	COSIGN_EXPERIMENTAL=1 $(CMD_COSIGN) sign $(PUSH_DOCKER_REPO)@$(shell docker inspect --format='{{index .RepoDigests 0}}' $(PUSH_DOCKER_REPO):full | awk -F'@' '{print $2}')
-endif
+	$(CMD_DOCKER) push $(PUSH_DOCKER_REPO):$(ARCH)-$(IMAGE_TAG)
+	$(CMD_DOCKER) push $(PUSH_DOCKER_REPO):$(ARCH)-$(IMAGE_TAG)-full
 #
 # create release notes (x86_64 only, other arches will be added after release)
 #
 ifeq ($(ARCH),x86_64)
-	echo '## Docker images' >> $(RELEASE_NOTES)
-	echo '' >> $(RELEASE_NOTES)
-	echo '- `docker pull docker.io/$(PUSH_DOCKER_REPO):$(IMAGE_TAG) (embedded eBPF CO-RE obj with BTFHUB support)`' >> $(RELEASE_NOTES);
-	echo '- `docker pull docker.io/$(PUSH_DOCKER_REPO):full-$(IMAGE_TAG) (compiles non CO-RE eBPF object on startup)`' >> $(RELEASE_NOTES);
+	echo '## Docker Images (x86_64 only)  ' >> $(RELEASE_NOTES)
+	echo '- `docker pull docker.io/$(PUSH_DOCKER_REPO):$(IMAGE_TAG)`' >> $(RELEASE_NOTES);
+	echo '- `docker pull docker.io/$(PUSH_DOCKER_REPO):$(IMAGE_TAG)-full`' >> $(RELEASE_NOTES);
+	echo '  ' >> $(RELEASE_NOTES);
+	echo '## Docker Images (per architecture)  ' >> $(RELEASE_NOTES)
+	echo '- `docker pull docker.io/$(PUSH_DOCKER_REPO):x86_64-$(IMAGE_TAG)`' >> $(RELEASE_NOTES);
+	echo '- `docker pull docker.io/$(PUSH_DOCKER_REPO):x86_64-$(IMAGE_TAG)-full`' >> $(RELEASE_NOTES);
+	echo '- `docker pull docker.io/$(PUSH_DOCKER_REPO):aarch64-$(IMAGE_TAG)`' >> $(RELEASE_NOTES);
+	echo '- `docker pull docker.io/$(PUSH_DOCKER_REPO):aarch64-$(IMAGE_TAG)-full`' >> $(RELEASE_NOTES);
+	echo '  ' >> $(RELEASE_NOTES);
+	echo '> The regular image is built with an embedded portable CO-RE eBPF object and BTFHub (for kernels not supporting BTF info).' >> $(RELEASE_NOTES);
+    echo '> The full image is built with an embedded portable CO-RE eBPF object and it is capable of building a per kernel non CO-RE eBPF object.' >> $(RELEASE_NOTES);
 endif
 #
 # release it (x86_64 only, other arches will be added after release)
@@ -235,7 +245,7 @@ endif
 ifeq ($(ARCH),x86_64)
 	$(CMD_GITHUB) release create $(SNAPSHOT_VERSION) $(OUT_ARCHIVE) $(OUT_CHECKSUMS) --title $(SNAPSHOT_VERSION) --notes-file $(RELEASE_NOTES)
 endif
-#
+
 endif
 
 .PHONY: clean
