--- a/builder/Makefile.release
+++ b/builder/Makefile.release
@@ -214,12 +214,16 @@ endif
 #
 ifeq ($(ARCH),x86_64)
 	$(CMD_DOCKER) push $(PUSH_DOCKER_REPO):latest
-	$(CMD_DOCKER) push $(PUSH_DOCKER_REPO):full
 	$(CMD_DOCKER) push $(PUSH_DOCKER_REPO):$(IMAGE_TAG)
+	COSIGN_EXPERIMENTAL=1 $(CMD_COSIGN) sign $(PUSH_DOCKER_REPO)@$(shell crane digest $(PUSH_DOCKER_REPO):latest)
+	$(CMD_DOCKER) push $(PUSH_DOCKER_REPO):full
 	$(CMD_DOCKER) push $(PUSH_DOCKER_REPO):$(IMAGE_TAG)-full
+	COSIGN_EXPERIMENTAL=1 $(CMD_COSIGN) sign $(PUSH_DOCKER_REPO)@$(shell crane digest $(PUSH_DOCKER_REPO):full)
 endif
 	$(CMD_DOCKER) push $(PUSH_DOCKER_REPO):$(ARCH)
+	COSIGN_EXPERIMENTAL=1 $(CMD_COSIGN) sign $(PUSH_DOCKER_REPO)@$(shell crane digest $(PUSH_DOCKER_REPO):$(ARCH))
 	$(CMD_DOCKER) push $(PUSH_DOCKER_REPO):$(ARCH)-full
+	COSIGN_EXPERIMENTAL=1 $(CMD_COSIGN) sign $(PUSH_DOCKER_REPO)@$(shell crane digest $(PUSH_DOCKER_REPO):$(ARCH)-full)
 	$(CMD_DOCKER) push $(PUSH_DOCKER_REPO):$(ARCH)-$(IMAGE_TAG)
 	$(CMD_DOCKER) push $(PUSH_DOCKER_REPO):$(ARCH)-$(IMAGE_TAG)-full
 #
