--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -30,8 +30,10 @@ jobs:
         run: |
           gh auth login --with-token <<<'${{ secrets.GITHUB_TOKEN }}'
           docker login docker.io --username ${{ secrets.DOCKERHUB_USER }} --password-stdin <<<'${{ secrets.DOCKERHUB_TOKEN }}'
+      - uses: imjasonh/setup-crane@e82f1b9a8007d399333baba4d75915558e9fb6a4 # v0.2
       - name: Build and Release
-        run: |
+        run: 
+          crane auth login -u ${{ secrets.DOCKERHUB_USER }} -p ${{ secrets.DOCKERHUB_TOKEN }} docker.io
           make -f builder/Makefile.release PUSH_DOCKER_REPO=aquasec/tracee
   release-arm64:
     name: Release ARM64
@@ -57,4 +59,5 @@ jobs:
           docker login docker.io --username ${{ secrets.DOCKERHUB_USER }} --password-stdin <<<'${{ secrets.DOCKERHUB_TOKEN }}'
       - name: Build and Release
         run: |
+          crane auth login -u ${{ secrets.DOCKERHUB_USER }} -p ${{ secrets.DOCKERHUB_TOKEN }} docker.io
           make -f builder/Makefile.release PUSH_DOCKER_REPO=aquasec/tracee
