workflow: add go.mod and go.sum to tests

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -16,6 +16,8 @@ on:
       - "!**.txt"
       - "!**.conf"
       # override previous rules:
+      - "go.mod"
+      - "go.sum"
       - "**.c"
       - "**.h"
       - "**.go"
