--- a/.github/workflows/mkdocs-latest.yaml
+++ b/.github/workflows/mkdocs-latest.yaml
@@ -17,6 +17,11 @@ jobs:
         with:
           fetch-depth: 0
           persist-credentials: true
+      - name: Login to docker.io registry
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - uses: actions/setup-python@v2
         with:
           python-version: 3.x
