--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -48,6 +48,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
+      - name: Login to docker.io registry
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Install Dependencies
         uses: ./.github/actions/build-dependencies
       - name: Lint
@@ -81,6 +86,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
+      - name: Login to docker.io registry
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Install Dependencies
         uses: ./.github/actions/build-dependencies
       - name: Build Signatures
@@ -102,6 +112,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
+      - name: Login to docker.io registry
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Install Dependencies
         uses: ./.github/actions/build-dependencies
       - name: Build Tracee Benchmark Tool
@@ -133,6 +148,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
+      - name: Login to docker.io registry
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Install Dependencies
         uses: ./.github/actions/build-dependencies
       - name: Run Unit Tests
@@ -151,6 +171,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
+      - name: Login to docker.io registry
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Install Dependencies
         uses: ./.github/actions/build-dependencies
       - name: Run Integration Tests
@@ -196,6 +221,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
+      - name: Login to docker.io registry
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: AWS Environment
         run: |
           dmidecode
@@ -229,6 +259,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
+      - name: Login to docker.io registry
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: AWS Environment
         run: |
           dmidecode
@@ -263,6 +298,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
+      - name: Login to docker.io registry
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: AWS Environment
         run: |
           dmidecode
@@ -296,6 +336,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
+      - name: Login to docker.io registry
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: AWS Environment
         run: |
           dmidecode
@@ -333,6 +378,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
+      - name: Login to docker.io registry
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: AWS Environment
         run: |
           dmidecode
@@ -366,6 +416,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
+      - name: Login to docker.io registry
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: AWS Environment
         run: |
           dmidecode
@@ -400,6 +455,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
+      - name: Login to docker.io registry
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: AWS Environment
         run: |
           dmidecode
@@ -433,6 +493,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
+      - name: Login to docker.io registry
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: AWS Environment
         run: |
           dmidecode
@@ -469,6 +534,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
+      - name: Login to docker.io registry
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: AWS Environment
         run: |
           dmidecode
@@ -502,6 +572,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
+      - name: Login to docker.io registry
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: AWS Environment
         run: |
           dmidecode
@@ -536,6 +611,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
+      - name: Login to docker.io registry
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: AWS Environment
         run: |
           dmidecode
@@ -569,6 +649,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
+      - name: Login to docker.io registry
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: AWS Environment
         run: |
           dmidecode
@@ -605,6 +690,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
+      - name: Login to docker.io registry
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: AWS Environment
         run: |
           dmidecode
@@ -638,6 +728,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
+      - name: Login to docker.io registry
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: AWS Environment
         run: |
           dmidecode
@@ -672,6 +767,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
+      - name: Login to docker.io registry
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: AWS Environment
         run: |
           dmidecode
@@ -705,6 +805,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
+      - name: Login to docker.io registry
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: AWS Environment
         run: |
           dmidecode
@@ -741,6 +846,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
+      - name: Login to docker.io registry
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: AWS Environment
         run: |
           dmidecode
@@ -774,6 +884,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
+      - name: Login to docker.io registry
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: AWS Environment
         run: |
           dmidecode
@@ -808,6 +923,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
+      - name: Login to docker.io registry
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: AWS Environment
         run: |
           dmidecode
@@ -841,6 +961,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
+      - name: Login to docker.io registry
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: AWS Environment
         run: |
           dmidecode
@@ -877,6 +1002,11 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
+      - name: Login to docker.io registry
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: AWS Environment
         run: |
           dmidecode
