--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -26,10 +26,11 @@ jobs:
         uses: sigstore/cosign-installer@main
         with:
           cosign-release: "v1.13.1"
-      - name: Authenticate
-        run: |
-          gh auth login --with-token <<<'${{ secrets.GITHUB_TOKEN }}'
-          docker login docker.io --username ${{ secrets.DOCKERHUB_USER }} --password-stdin <<<'${{ secrets.DOCKERHUB_TOKEN }}'
+      - name: Login to docker.io registry
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build and Release
         run: |
           make -f builder/Makefile.release PUSH_DOCKER_REPO=aquasec/tracee
@@ -50,11 +51,12 @@ jobs:
         uses: actions/checkout@v3
         with:
           submodules: true
+      - name: Login to docker.io registry
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USER }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       # TODO: check if sigstore/cosign-installer@main supports arm64
-      - name: Authenticate
-        run: |
-          gh auth login --with-token <<<'${{ secrets.GITHUB_TOKEN }}'
-          docker login docker.io --username ${{ secrets.DOCKERHUB_USER }} --password-stdin <<<'${{ secrets.DOCKERHUB_TOKEN }}'
       - name: Build and Release
         run: |
           make -f builder/Makefile.release PUSH_DOCKER_REPO=aquasec/tracee
