--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -29,11 +29,12 @@ concurrency:
 env:
   # TRC-103 enabled but under analysis
   # https://github.com/aquasecurity/tracee/issues/2820
-  TESTS: "TRC-102 TRC-103 TRC-104 TRC-105 TRC-107 TRC-1010 TRC-1014 TRC-1016 TRC-1018"
+  TESTS: "TRC-102 TRC-103 TRC-104 TRC-105 TRC-107 TRC-1010 TRC-1014 TRC-1016 TRC-1018 TRC-1022"
   # ARM64 tests are disabled due to missing arm64 binaries in tracee-tester
   # https://github.com/aquasecurity/tracee/issues/2821
-  ARM64_TESTS: "TRC-102 TRC-103 TRC-104 TRC-107 TRC-1010 TRC-1014 TRC-1016 TRC-1018"
-  RHEL_ARM64_TESTS: "TRC-102 TRC-103 TRC-107 TRC-1010 TRC-1014 TRC-1016 TRC-1018"
+  # TRC-1022 disabled in ARM64_TESTS since it doesn't work on Focal 4.19 and 5.4.
+  ARM64_TESTS: "TRC-102 TRC-103 TRC-104 TRC-105 TRC-107 TRC-1010 TRC-1014 TRC-1016 TRC-1018"
+  RHEL_ARM64_TESTS: "TRC-102 TRC-103 TRC-105 TRC-107 TRC-1010 TRC-1014 TRC-1016 TRC-1018 TRC-1022"
   NETTESTS: "IPv4 IPv6 TCP UDP ICMP ICMPv6 DNS HTTP"
   INSTTESTS: "VFS_WRITE FILE_MODIFICATION SECURITY_INODE_RENAME"
 jobs:
