--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -1,11 +1,12 @@
 #
 # When a PR is opened or updated: Label it based on files being changed
 #
-name: "Pull Request Labeler"
+name: "Labeler"
 on:
   - pull_request_target
 jobs:
   triage:
+    name: Triage Pull Request
     permissions:
       contents: read
       pull-requests: write
