--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -855,48 +855,51 @@ jobs:
         run: |
           DONTSLEEP=1 ISNONCORE=1 ./tests/e2e-instrumentation-test.sh
   #
-  # FOCAL v4.19 (non CO-RE only)
+  # Temporarily disabled as the AMI is being recreated (deleted by accident)
   #
-  focal419:
-    name: Focal 4.19 X64
-    needs:
-      - unit-tests
-      - verify-signatures
-      - verify-tools
-    env:
-      HOME: "/tmp/root"
-      GOPATH: "/tmp/go"
-      GOCACHE: "/tmp/go-cache"
-      GOROOT: "/usr/local/go"
-    runs-on:
-      [
-        "github-self-hosted_ami-0bab76ae5b7322b45_${{ github.event.number }}-${{ github.run_id }}_x64",
-      ]
-    steps:
-      - name: "Checkout"
-        uses: actions/checkout@v3
-        with:
-          submodules: true
-      - name: AWS Environment
-        run: |
-          dmidecode
-        # CORE
-      - name: "CORE: Kernel"
-        run: |
-          echo UNSUPPORTED
-      - name: "CORE: Network"
-        run: |
-          echo UNSUPPORTED
-      - name: "CORE: Instrumentation"
-        run: |
-          echo UNSUPPORTED
-        # NONCORE
-      - name: "NONCORE: Kernel"
-        run: |
-          DONTSLEEP=1 ISNONCORE=1 ./tests/kerneltest.sh
-      - name: "NONCORE Network"
-        run: |
-          echo UNSUPPORTED
-      - name: "NONCORE: Instrumentation"
-        run: |
-          echo UNSUPPORTED
+  # #
+  # # FOCAL v4.19 (non CO-RE only)
+  # #
+  # focal419:
+  #   name: Focal 4.19 X64
+  #   needs:
+  #     - unit-tests
+  #     - verify-signatures
+  #     - verify-tools
+  #   env:
+  #     HOME: "/tmp/root"
+  #     GOPATH: "/tmp/go"
+  #     GOCACHE: "/tmp/go-cache"
+  #     GOROOT: "/usr/local/go"
+  #   runs-on:
+  #     [
+  #       "github-self-hosted_ami-0bab76ae5b7322b45_${{ github.event.number }}-${{ github.run_id }}_x64",
+  #     ]
+  #   steps:
+  #     - name: "Checkout"
+  #       uses: actions/checkout@v3
+  #       with:
+  #         submodules: true
+  #     - name: AWS Environment
+  #       run: |
+  #         dmidecode
+  #       # CORE
+  #     - name: "CORE: Kernel"
+  #       run: |
+  #         echo UNSUPPORTED
+  #     - name: "CORE: Network"
+  #       run: |
+  #         echo UNSUPPORTED
+  #     - name: "CORE: Instrumentation"
+  #       run: |
+  #         echo UNSUPPORTED
+  #       # NONCORE
+  #     - name: "NONCORE: Kernel"
+  #       run: |
+  #         DONTSLEEP=1 ISNONCORE=1 ./tests/kerneltest.sh
+  #     - name: "NONCORE Network"
+  #       run: |
+  #         echo UNSUPPORTED
+  #     - name: "NONCORE: Instrumentation"
+  #       run: |
+  #         echo UNSUPPORTED
